Fixed overflow on intro bg

--- a/src/index.css
+++ b/src/index.css
@@ -61,8 +61,8 @@ header {
 }
 
 .intro-bg {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   position: absolute;
   top: 0;
   z-index: 10;
